--- a/cfn.yaml
+++ b/cfn.yaml
@@ -73,7 +73,7 @@ Resources:
     Type: AWS::Events::Rule
     Properties:
       Description: Event sent to process the previous day of data
-      ScheduleExpression: cron(14 3 * * ? *)
+      ScheduleExpression: rate(1 minute)
       Targets:
         - Id: Lambda
           Arn: !GetAtt Lambda.Arn
