--- a/cfn.yaml
+++ b/cfn.yaml
@@ -49,6 +49,20 @@ Resources:
               Action:
                 - lambda:InvokeFunction
               Resource: "*"
+        - PolicyName: s3Config
+          PolicyDocument:
+            Statement:
+              Effect: Allow
+              Action:
+                - s3:GetObject
+              Resource: !Sub arn:aws:s3:::mobile-notifications-dist/${Stage}/*
+        - PolicyName: s3Config
+          PolicyDocument:
+            Statement:
+              Effect: Allow
+              Action:
+                - s3:*
+              Resource: !Sub arn:aws:s3:::pa-football-time-machine/*
   Lambda:
     Type: AWS::Lambda::Function
     Properties:
