--- a/cfn.yaml
+++ b/cfn.yaml
@@ -58,7 +58,7 @@ Resources:
   ApiLambda:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: com.gu.footballtimemachine.ApiLambda::handler
+      Handler: com.gu.footballtimemachine.ApiLambda::getPaData
       Runtime: java8
       CodeUri:
         Bucket: !Ref DeployBucket
@@ -77,6 +77,68 @@ Resources:
           Type: Api
           Properties:
             Path: /{proxy+}
+            Method: ANY
+      Policies:
+      - Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - s3:*
+            Resource: arn:aws:s3:::pa-football-time-machine/*
+
+  SetDateLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: com.gu.footballtimemachine.ApiLambda::setDate
+      Runtime: java8
+      CodeUri:
+        Bucket: !Ref DeployBucket
+        Key: !Sub ${Stack}/${Stage}/${App}-api/${App}-api.jar
+      FunctionName: !Sub ${App}-api-${Stage}
+      Environment:
+        Variables:
+          Stage: !Ref Stage
+          Stack: !Ref Stack
+          App: !Sub ${App}-api
+      Description: Restitutes PA data through a mocked API
+      MemorySize: 256
+      Timeout: 60
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /setDate
+            Method: ANY
+      Policies:
+      - Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - s3:*
+            Resource: arn:aws:s3:::pa-football-time-machine/*
+
+  GetTimeLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: com.gu.footballtimemachine.ApiLambda::getTime
+      Runtime: java8
+      CodeUri:
+        Bucket: !Ref DeployBucket
+        Key: !Sub ${Stack}/${Stage}/${App}-api/${App}-api.jar
+      FunctionName: !Sub ${App}-api-${Stage}
+      Environment:
+        Variables:
+          Stage: !Ref Stage
+          Stack: !Ref Stack
+          App: !Sub ${App}-api
+      Description: Restitutes PA data through a mocked API
+      MemorySize: 256
+      Timeout: 60
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /getTime
             Method: ANY
       Policies:
       - Version: '2012-10-17'
