--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -2,6 +2,10 @@ stacks: [mobile]
 regions: [eu-west-1]
 
 deployments:
+  cfn-football-time-machine:
+    type: cloud-formation
+    parameters:
+      templatePath: cfn.yaml
   football-time-machine-archive:
     type: aws-lambda
     parameters:
