--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -2,10 +2,12 @@ stacks: [mobile]
 regions: [eu-west-1]
 
 deployments:
-  cfn-football-time-machine:
+  football-time-machine:
     type: cloud-formation
     parameters:
       templatePath: cfn.yaml
+      prependStackToCloudFormationStackName: false
+      appendStageToCloudFormationStackName: true
   football-time-machine-archive:
     type: aws-lambda
     parameters:
