--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,5 +46,5 @@ jobs:
               - archive/target/scala-2.12/football-time-machine-archive.jar
             football-time-machine-api:
               - api/target/scala-2.12/football-time-machine-api.jar
-            cfn-football-time-machine:
+            football-time-machine:
               - cfn.yaml
