--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - '*'
   pull_request:
-    types: [opened, reopened]
+    branches:
+      - '*'
 
 jobs:
   scala_steward:
