--- a/.github/workflows/scala-steward.conf
+++ b/.github/workflows/scala-steward.conf
@@ -12,13 +12,18 @@ pullRequests.frequency = "7 days"
 # the default procedure (one PR per update).
 
 pullRequests.grouping = [
-  { name = "major", "title" = "Major updates", "filter" = [{"version" = "major"}, "customLabels" = ["major"] },
-  { name = "minor", "title" = "Minor updates", "filter" = [{"version" = "minor"}, "customLabels" = ["minor"] },
-  { name = "patch", "title" = "Patch updates", "filter" = [{"version" = "patch"}, "customLabels" = ["patch"] },
+    { name = "patch", "title" = "Patch updates", "filter" = [{"version" = "patch"}},
+  { name = "minor", "title" = "Minor updates", "filter" = [{"version" = "minor"}},
+  { name = "major", "title" = "Major updates", "filter" = [{"version" = "major"}},
   { name = "all", "title" = "Other dependency updates", "filter" = [{"group" = "*"}] }
 ]
 
 # pullRequests.customLabels allows to add custom labels to PRs.
 # This is useful if you want to use the labels for automation (project board for example).
 # Defaults to no labels (no labels are added).
-pullRequests.customLabels = [ "dependencies" ]
+pullRequests.customLabels = [ 
+  { name = "patches", labels = ["patch"]},
+  { name = "minor", labels = ["minor"]},
+  { name = "major", labels = ["major"]},
+  { name = "all", labels = ["dependencies"]}
+]
