--- a/.github/workflows/scala-steward.conf
+++ b/.github/workflows/scala-steward.conf
@@ -22,7 +22,7 @@ pullRequests.grouping = [
 # This is useful if you want to use the labels for automation (project board for example).
 # Defaults to no labels (no labels are added).
 pullRequests.customLabels = [ 
-  { name = "patches", labels = ["patch"]},
+  { name = "patch", labels = ["patch"]},
   { name = "minor", labels = ["minor"]},
   { name = "major", labels = ["major"]},
   { name = "all", labels = ["dependencies"]}
