--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup JDK and sbt
-        uses: guardian/setup-scala
+        uses: guardian/setup-scala@v1
         with:
           distribution: corretto
           java-version: 21
